--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,16 @@
     <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
 </dependencies>
     <build>
+
 <plugins>
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <fork>true</fork>
+            <executable>C:\Program Files\Java\jdk1.8.0_151\bin\javac.exe</executable>
+        </configuration>
+    </plugin>
     <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
