--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
         <version>3.1</version>
         <configuration>
             <fork>true</fork>
-            <executable>C:\Program Files\Java\jdk1.8.0_151\bin\javac.exe</executable>
+            <executable>C:\Program Files\Java\jdk1.8.0_151\bin</executable>
         </configuration>
     </plugin>
     <plugin>
