--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <groupId>info.cukes</groupId>
         <artifactId>cucumber-java</artifactId>
         <version>1.2.4</version>
+        <scope>test</scope>
     </dependency>
 
 
@@ -31,6 +32,7 @@
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>2.8.2</version>
+        <scope>test</scope>
     </dependency>
 
 
@@ -44,6 +46,7 @@
         <groupId>com.jayway.restassured</groupId>
         <artifactId>json-path</artifactId>
         <version>2.4.0</version>
+        <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
     <dependency>
@@ -65,6 +68,7 @@
         <groupId>com.jayway.restassured</groupId>
         <artifactId>xml-path</artifactId>
         <version>2.4.0</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>io.rest-assured</groupId>
@@ -77,6 +81,7 @@
         <groupId>com.stanfy</groupId>
         <artifactId>gson-xml-java</artifactId>
         <version>0.1.7</version>
+        <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/xmlpull/xmlpull -->
 
