--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
     </dependency-->
     <!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
     <dependency>
-        <groupId>com.jayway.restassured</groupId>
+        <groupId>io.rest-assured</groupId>
         <artifactId>json-path</artifactId>
-        <version>2.4.0</version>
+        <version>3.0.1</version>
 
     </dependency>
     <!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
@@ -64,9 +64,9 @@
 
 
     <dependency>
-        <groupId>com.jayway.restassured</groupId>
+        <groupId>io.rest-assured</groupId>
         <artifactId>xml-path</artifactId>
-        <version>2.4.0</version>
+        <version>3.0.1</version>
 
     </dependency>
     <dependency>
